--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,18 @@
         "/workspaces/ros2-devcontainer/install/my_cpp_py_pkg/lib/python3.12/site-packages",
         "/opt/ros/jazzy/lib/python3.12/site-packages"
     ],
-    "ros.distro": "jazzy"
+    "ros.distro": "jazzy",
+    "files.exclude": {
+        "**/build": true,
+        "**/install": true,
+        "**/log": true,
+        ".cache": true,
+        "**/__pycache__": true,
+        "**/__pycache__/**": true,
+        "**/__pycache__/**/**": true,
+        "**/__pycache__/**/**/**": true,
+        "**/__pycache__/**/**/**/**": true,
+        "**/__pycache__/**/**/**/**/**": true,
+    },
+
 }
